# llm-fair-geolocation-extraction-WWW2026

./: .gitignore  Metrics.ipynb  README.md  Spacy TRF Transfer Learning.py  XML Roberta NER Transfer Learning.py  pyproject.toml
data/: claude_haiku_json.json  claude_haiku_md.json  claude_sonnet_json.json  claude_sonnet_md.json  deepseek_chat_json.json  deepseek_chat_md.json  deepseek_json.json  deepseek_md.json  gpt_5.json  gpt_5_markdown.json  gpt_o4.json  gpt_o4_markdown.json  gpt_o4_mini.json  gpt_o4_mini_markdown.json  spacy_llm_gpt_4o.json  spacy_md.json  spacy_trf.json  spacy_trf_tuned_v2.json  xlm-roberta.json  xml_roberta_tuned.json
data/tagged/: gt_filtered_v2.json
geocoding_services/: docker-compose.yml  elastic_dockerfile  pelias.json
geocoding_services/data/geonames/: script_country_constant.py
geocoding_services/pelias_geonames/: Dockerfile
src/: agent_tagging.py  constants.py  dataset.py  llm_json_tagging.py  llm_markdown_tagging.py  metrics.py  rule_toponym_geolocator.py
src/geocoding/: geonames_agent.py
src/geocoding/geonames_search/: __init__.py  dataframe_geonames_searcher.py  pelias_geonames_search.py
